- add total exerciseTime today section

--- a/BeActive/en.lproj/Localizable.strings
+++ b/BeActive/en.lproj/Localizable.strings
@@ -20,5 +20,4 @@
 "Goal: %@" = "Goal: %@" ;
 "todays stats" = "Today's stats";
 "this week stats" = "This week's stats";
-
-
+"exercise time" = "Exercise time";
