--- a/BeActive/es.lproj/Localizable.strings
+++ b/BeActive/es.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "Goal: %@" = "Objetivo: %@";
 "todays stats" = "Resumen hoy";
 "this week stats" = "Resumen de esta semana";
+"exercise time" = "Tiempo de ejercicio";
