- add floorsClimbed card today stats

--- a/BeActive/es.lproj/Localizable.strings
+++ b/BeActive/es.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "todays stats" = "Resumen hoy";
 "this week stats" = "Resumen de esta semana";
 "exercise time" = "Tiempo de ejercicio";
+"floors ascend" = "Pisos subidos";
