--- a/BeActive/en.lproj/Localizable.strings
+++ b/BeActive/en.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "todays stats" = "Today's stats";
 "this week stats" = "This week's stats";
 "exercise time" = "Exercise time";
+"floors ascend" = "Floors climbed";
