- add totalDistance walk/run today stats

--- a/BeActive/en.lproj/Localizable.strings
+++ b/BeActive/en.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "this week stats" = "This week's stats";
 "exercise time" = "Exercise time";
 "floors ascend" = "Floors climbed";
+"distance walk" = " Total Distance";
+"walk + run" = " Walk + Run";
