--- a/BeActive/es.lproj/Localizable.strings
+++ b/BeActive/es.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "this week stats" = "Resumen de esta semana";
 "exercise time" = "Tiempo de ejercicio";
 "floors ascend" = "Pisos subidos";
+"distance walk" = " Distancia total";
+"walk + run" = " Andar + Correr";
