- fix water intake issue

--- a/BeActive/es.lproj/Localizable.strings
+++ b/BeActive/es.lproj/Localizable.strings
@@ -24,3 +24,4 @@
 "floors ascend" = "Pisos subidos";
 "distance walk" = " Distancia total";
 "walk + run" = " Andar + Correr";
+"water" = "Agua ingerida";
