--- a/BeActive/en.lproj/Localizable.strings
+++ b/BeActive/en.lproj/Localizable.strings
@@ -24,3 +24,4 @@
 "floors ascend" = "Floors climbed";
 "distance walk" = " Total Distance";
 "walk + run" = " Walk + Run";
+"water" = "Water Intake";
